--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
     <p>
         Please upload a file to be converted: <br>
-        <form action = "http://localhost:5000/uploader" method = "POST"
+        <form action = "http://localhost:5000/convert" method = "POST"
             enctype ="multipart/form-data">
             <input type = "file" name = "file" />
             <input type = "submit" />
