--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,7 @@
         <form action = "http://localhost:5000/convert" method = "POST"
             enctype ="multipart/form-data">
             <input type = "file" name = "file" multiple/><br>
+            <input type = "file" name = "config" accept=".yaml, text/yaml"/><br>
             <input type = "submit" value="Upload" />
         </form>
     </p>
